	  support/regression/tests/gcc-torture-execute-divcmp-1.c,
	  support/regression/tests/gcc-torture-execute-enum-3.c,
	  support/regression/tests/gcc-torture-execute-cmpsf-1.c,
	  support/regression/tests/gcc-torture-execute-mod-1.c,
	  support/regression/tests/gcc-torture-execute-divcmp-2.c,
	  support/regression/tests/gcc-torture-execute-int-compare.c,
	  support/regression/tests/gcc-torture-execute-divcmp-3.c:
	  Added some tests from the execute part of the gcc torture regression test suite.

2011-12-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/as6808/Makefile.in,
	* sdas/as8051/Makefile.in,
	* sdas/asgb/Makefile.in,
	* sdas/asrab/Makefile.in,
	* sdas/asz80/Makefile.in: added dependencies

2011-12-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asz80/z80pst.c: forgot this one, probably sdas dependencies are
	  insufficient too

2011-12-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* debugger/mcs51/sdcdb.c (escapeQuotes): fixed warning
	* sdas/asrab/rabbitmch.c: fixed bug 3461821 by calling outrb with 0
	* sdas/as6808/m08pst.c,
	* sdas/as8051/i51adr.c,
	* sdas/as8051/i51mch.c,
	* sdas/as8051/i51pst.c,
	* sdas/as8051/i8051.h,
	* sdas/asgb/gbpst.c,
	* sdas/asxxsrc/asdata.c,
	* sdas/asxxsrc/asexpr.c,
	* sdas/asxxsrc/aslex.c,
	* sdas/asxxsrc/aslist.c,
	* sdas/asxxsrc/asmain.c,
	* sdas/asxxsrc/asout.c,
	* sdas/asxxsrc/assym.c,
	* sdas/asxxsrc/asxxxx.h,
	* sdas/asz80/z80mch.c,
	* sdas/linksrc/aslink.h,
	* sdas/linksrc/lkarea.c,
	* sdas/linksrc/lkhead.c,
	* sdas/linksrc/lklex.c,
	* sdas/linksrc/lklist.c,
	* sdas/linksrc/sdld.c,
	* sdas/linksrc/sdld.h: another step towards ASxxxx v5
	* sdas/asrab/rabbit.h,
	* sdas/asrab/rabbitadr.c,
	* sdas/asrab/rabbitext.c,
	* sdas/asrab/rabbitpst.c: native line endings, no TABs
	* src/ds390/main.c,
	* src/mcs51/main.c,
	* src/z80/main.c: asxxx -z flag is now case INsensitive
	* src/hc08/main.c: fixed bug 1666106 by adding (PAG) to DSEG and OSEG
	* src/SDCCglobl.h: fixed -E comment